@@ -8,9 +8,9 @@ License: GPL
 biocViews: GeneExpression, Transcription, AlternativeSplicing,
         Coverage, DifferentialExpression, DifferentialSplicing,
         TimeCourse, RNASeq, GenomeAnnotation, Sequencing, Alignment
-Depends: methods,GenomicRanges,GenomicFeatures,edgeR,BiocGenerics,
-        IRanges, GenomicAlignments, DESeq2, DEXSeq, Gviz, grDevices,
-        stats, utils, S4Vectors, AnnotationDbi, parallel
+Depends: methods, grDevices, stats, utils, parallel
+Imports: DESeq2, DEXSeq, GenomicRanges, GenomicFeatures, edgeR, BiocGenerics,
+        IRanges, GenomicAlignments, Gviz, S4Vectors, AnnotationDbi, limma
 Suggests: RNAseqData.HNRNPC.bam.chr14, BiocStyle
 Maintainer: Estefania Mancini <emancini@leloir.org.ar>
 Description: Integrative pipeline for the analysis of alternative
