@@ -3,15 +3,21 @@ import(methods)
 import(utils)
 import(BiocGenerics)
 import(IRanges)
-import(GenomicRanges)
 import(GenomicFeatures)
 import(edgeR)
-import(GenomicAlignments)
-import(DESeq2)
-import(DEXSeq)
-importFrom("grDevices", "dev.off", "png")
-importFrom("stats", "aggregate", "formula", "p.adjust")
-importFrom(parallel, mclapply)
+importFrom(limma, vennDiagram)
+import(AnnotationDbi)
+importFrom(GenomicAlignments, readGAlignments, njunc, junctions)
+importFrom(DESeq2, estimateSizeFactors, estimateDispersions, dispersions, 
+    "dispersions<-", DESeq, DESeqDataSetFromMatrix, results )
+importFrom(DEXSeq, DEXSeqDataSet, testForDEU, DEXSeqResults)
+importClassesFrom(DEXSeq, DEXSeqDataSet)
+importClassesFrom( GenomicRanges, GRanges, GRangesList )
+importFrom( GenomicRanges,  GRanges, GRangesList, findOverlaps, countOverlaps, 
+    disjoin, duplicated, strand )
+importFrom( "grDevices", "dev.off", "png" )
+importFrom( "stats", "aggregate", "formula", "p.adjust" )
+importFrom( parallel, mclapply )
 import(S4Vectors)
 import(AnnotationDbi)
 import(Gviz)
