@@ -29,6 +29,7 @@ Returns dataframes with genomic metadata and  PSI and PIR metrics
 }
 \author{ Estefania Mancini, Marcelo Yanovsky, Ariel Chernomoretz  }
 \examples{
+library(AnnotationDbi)
 chr14 <- system.file("extdata","chr14.sqlite", package="ASpli")
 genome <- loadDb(chr14)
 features <- binGenome(genome)
@@ -36,7 +37,7 @@ library(RNAseqData.HNRNPC.bam.chr14)
 targets <- data.frame(bam=RNAseqData.HNRNPC.bam.chr14_BAMFILES,
                        condition=c(rep("CT",4),rep("KD",4)))
 bam <- loadBAM(targets)
-counts <- readCounts(features, bam,  l=100L, maxISize=50000);
+counts <- readCounts(features, bam, l=100L, targets = targets, maxISize=50000);
 group <- factor(c(rep("CT",4),rep("KD",4)))
 pair <- c("CT","KD")  
 as <- AsDiscover(counts, targets, features, bam, threshold=5, l=100, pair=pair)
