@@ -31,6 +31,7 @@ Returns dataframes with counts by sample and genomic metadata
 }
 \author{ Estefania Mancini, Marcelo Yanovsky, Ariel Chernomoretz  }
 \examples{
+library(AnnotationDbi)
 chr14 <- system.file("extdata","chr14.sqlite", package="ASpli")
 genome <- loadDb(chr14)
 features <- binGenome(genome)
@@ -38,7 +39,7 @@ library(RNAseqData.HNRNPC.bam.chr14)
 targets <- data.frame(bam=RNAseqData.HNRNPC.bam.chr14_BAMFILES,
                        condition=c(rep("CT",4),rep("KD",4)))
 bam <- loadBAM(targets)
-counts <- readCounts(features, bam,  l=100L, maxISize=50000);
+counts <- readCounts(features, bam,  l=100L, targets = targets, maxISize=50000);
 countsb(counts)
 countse1i(counts)
 countsg(counts)
